--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,10 @@ OPTION( METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF )
 OPTION( METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF )
 OPTION( METABUF_CONFIG "METABUF_CONFIG" OFF )
 OPTION( METABUF_INSTALL "METABUF_INSTALL" OFF )
+OPTION( METABUF_TEST "METABUF_TEST" ON )
 
 
-IF( NOT METABUF_EXTERNAL_BUILD )
+IF(NOT METABUF_EXTERNAL_BUILD)
     set( CMAKE_CXX_STANDARD 14 )
     
     SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )
@@ -37,13 +38,16 @@ IF(METABUF_CONFIG)
     add_definitions(-DMETABUF_CONFIG=${METABUF_CONFIG})
 ENDIF()
 
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/include/config/Metaconfig.hpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/include/metabuf/Metadata.hpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/include/metabuf/Reader.hpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metadata.cpp )
+set( METABUF_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include )
+set( METABUF_SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src )
 
-INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include )
-INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf )
+SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/config/Metaconfig.hpp )
+SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Metadata.hpp )
+SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Reader.hpp )
+SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metabuf/Metadata.cpp )
+
+INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_INCLUDE_PATH} )
+INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metabuf )
 
 ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )
 
@@ -57,8 +61,8 @@ if(METABUF_INSTALL)
         ARCHIVE DESTINATION lib)
 endif()
 
-if( METABUF_METAGEN OR METABUF_XML2METABUF )
-    if( NOT METABUF_PUGIXML_EXTERNAL )
+if(METABUF_METAGEN OR METABUF_XML2METABUF)
+    if(NOT METABUF_PUGIXML_EXTERNAL)
         include(cmake/pugixml_download.cmake)
         
         set(METABUF_PUGIXML_INCLUDE_DIR ${pugixml_INCLUDE_DIR})
@@ -66,43 +70,45 @@ if( METABUF_METAGEN OR METABUF_XML2METABUF )
     endif()
 endif()
 
-if( METABUF_METAGEN OR METABUF_XML2METABUF )
+
+
+if(METABUF_METAGEN OR METABUF_XML2METABUF)
     #xml2metabuf
     
     PROJECT(xml2metabuf)
     
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metabuf.cpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metabuf.hpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metacode.cpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metacode.hpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.cpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.hpp )
+    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metabuf.cpp )
+    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metabuf.hpp )
+    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.cpp )
+    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.hpp )
+    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.cpp )
+    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.hpp )
     
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf )
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_INCLUDE_PATH} )
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_SOURCE_PATH}/xml2metabuf )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
     ADD_LIBRARY( ${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
     
-    if( NOT METABUF_PUGIXML_EXTERNAL )
+    if(NOT METABUF_PUGIXML_EXTERNAL)
         add_dependencies(${PROJECT_NAME} pugixml_download)
     endif()
 endif()
 
-if( METABUF_METAGEN )
+if(METABUF_METAGEN)
     #metagen
 
     PROJECT(metagen)
     
-    set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} metagen/metagen.cpp )
+    set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metagen/metagen.cpp )
 
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metagen )
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_INCLUDE_PATH} )
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metagen )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
     ADD_EXECUTABLE( ${PROJECT_NAME} ${METAGEN_SOURCE_FILES} )
 
-    if( WIN32 )
+    if(WIN32)
         set_target_properties( ${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
         set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
     endif()
@@ -111,7 +117,14 @@ if( METABUF_METAGEN )
     target_link_libraries(${PROJECT_NAME} ${XML2METABUF_LIBRARY_NAME})
     target_link_libraries(${PROJECT_NAME} ${METABUF_PUGIXML_LIBRARY_NAME})
     
-    if( NOT METABUF_PUGIXML_EXTERNAL )
+    if(NOT METABUF_PUGIXML_EXTERNAL)
         add_dependencies(${PROJECT_NAME} pugixml_download)
     endif()
 endif()
+
+if(METABUF_TEST)
+    include(CTest)
+    enable_testing()
+
+    add_subdirectory(tests)
+endif(METABUF_TEST)
