rework METABUF_EXTERNAL_CONFIG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ OPTION( METABUF_XML2METABUF "METABUF_XML2METABUF" OFF )
 OPTION( METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF )
 OPTION( METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF )
 OPTION( METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF )
-OPTION( METABUF_CONFIG "METABUF_CONFIG" OFF )
+OPTION( METABUF_EXTERNAL_CONFIG "METABUF_EXTERNAL_CONFIG" OFF )
 OPTION( METABUF_INSTALL "METABUF_INSTALL" OFF )
 OPTION( METABUF_TEST "METABUF_TEST" ON )
 
@@ -48,8 +48,8 @@ IF(NOT METABUF_EXTERNAL_BUILD)
     endif()
 ENDIF()
 
-IF(METABUF_CONFIG)
-    add_definitions(-DMETABUF_CONFIG=${METABUF_CONFIG})
+IF(METABUF_EXTERNAL_CONFIG)
+    add_definitions(-DMETABUF_EXTERNAL_CONFIG)
 ENDIF()
 
 set( METABUF_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include )
@@ -71,7 +71,7 @@ if(METABUF_INSTALL)
         FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
 
     install(TARGETS ${PROJECT_NAME}
-        LIBRARY DESTINATION lib
+            
         ARCHIVE DESTINATION lib)
 endif()
 
