--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,5 +50,5 @@ endmacro()
 ADD_MOVIE_TEST(open_protocol test_utils)
 ADD_MOVIE_TEST(make_metacode test_utils)
 ADD_MOVIE_TEST(generate_bin test_common test_utils metabuf)
-ADD_MOVIE_TEST(parse_bin test_common test_utils)
-ADD_MOVIE_TEST(memory_leak test_common test_utils)
+ADD_MOVIE_TEST(parse_bin test_common test_utils metabuf)
+ADD_MOVIE_TEST(memory_leak test_common test_utils metabuf)
