--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,19 +17,19 @@ OPTION( METABUF_TEST "METABUF_TEST" ON )
 
 IF(NOT METABUF_EXTERNAL_BUILD)
     if(${CMAKE_C_COMPILER_ID} STREQUAL Clang)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror")
     elseif(${CMAKE_C_COMPILER_ID} STREQUAL AppleClang)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror")
     elseif(${CMAKE_C_COMPILER_ID} STREQUAL GNU)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror")
     elseif(${CMAKE_C_COMPILER_ID} STREQUAL Intel)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror")
     elseif(${CMAKE_C_COMPILER_ID} STREQUAL MSVC)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Wall /WX")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4710")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4738")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4820")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4711")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4710")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4738")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4820")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4711")
     endif()
 
     set( CMAKE_CXX_STANDARD 14 )
