--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.0)
 
-set( METABUF_LIBRARY_NAME metabuf )
+set(METABUF_LIBRARY_NAME metabuf)
 
 PROJECT(metabuf)
 
-OPTION( METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF )
-OPTION( METABUF_METAGEN "METABUF_METAGEN" ON )
-OPTION( METABUF_XML2METABUF "METABUF_XML2METABUF" OFF )
-OPTION( METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF )
-OPTION( METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF )
-OPTION( METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF )
-OPTION( METABUF_EXTERNAL_CONFIG "METABUF_EXTERNAL_CONFIG" OFF )
-OPTION( METABUF_INSTALL "METABUF_INSTALL" OFF )
-OPTION( METABUF_TEST "METABUF_TEST" ON )
+OPTION(METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF)
+OPTION(METABUF_METAGEN "METABUF_METAGEN" ON)
+OPTION(METABUF_XML2METABUF "METABUF_XML2METABUF" OFF)
+OPTION(METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF)
+OPTION(METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF)
+OPTION(METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF)
+OPTION(METABUF_EXTERNAL_CONFIG "METABUF_EXTERNAL_CONFIG" OFF)
+OPTION(METABUF_INSTALL "METABUF_INSTALL" OFF)
+OPTION(METABUF_TEST "METABUF_TEST" ON)
 
 
 IF(NOT METABUF_EXTERNAL_BUILD)
@@ -32,7 +32,7 @@ IF(NOT METABUF_EXTERNAL_BUILD)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4711")
     endif()
 
-    set( CMAKE_CXX_STANDARD 14 )
+    set(CMAKE_CXX_STANDARD 14)
     
     if(MSVC)
         add_definitions(-D_CRT_SECURE_NO_WARNINGS)
@@ -52,18 +52,20 @@ IF(METABUF_EXTERNAL_CONFIG)
     add_definitions(-DMETABUF_EXTERNAL_CONFIG)
 ENDIF()
 
-set( METABUF_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include )
-set( METABUF_SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src )
+set(METABUF_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(METABUF_SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/config/Metaconfig.hpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Metadata.hpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Reader.hpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metabuf/Metadata.cpp )
+SET(METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/config/Metaconfig.hpp)
+SET(METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Metadata.hpp)
+SET(METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Memory.hpp)
+SET(METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_INCLUDE_PATH}/metabuf/Reader.hpp)
+SET(METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metabuf/Metadata.cpp)
+SET(METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metabuf/Memory.cpp)
 
-INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_INCLUDE_PATH} )
-INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metabuf )
+INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_INCLUDE_PATH})
+INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metabuf)
 
-ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )
+ADD_LIBRARY(${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES})
 
 if(METABUF_INSTALL)
     install(DIRECTORY include
@@ -71,7 +73,6 @@ if(METABUF_INSTALL)
         FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
 
     install(TARGETS ${PROJECT_NAME}
-            
         ARCHIVE DESTINATION lib)
 endif()
 
@@ -91,18 +92,18 @@ if(METABUF_METAGEN OR METABUF_XML2METABUF)
     
     PROJECT(xml2metabuf)
     
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metabuf.cpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metabuf.hpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.cpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.hpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.cpp )
-    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.hpp )
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metabuf.cpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metabuf.hpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.cpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.hpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.cpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.hpp)
     
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_INCLUDE_PATH} )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_SOURCE_PATH}/xml2metabuf )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_INCLUDE_PATH})
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_SOURCE_PATH}/xml2metabuf)
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR})
     
-    ADD_LIBRARY( ${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
+    ADD_LIBRARY(${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES})
     
     if(NOT METABUF_PUGIXML_EXTERNAL)
         add_dependencies(${PROJECT_NAME} pugixml_download)
@@ -114,17 +115,17 @@ if(METABUF_METAGEN)
 
     PROJECT(metagen)
     
-    set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metagen/metagen.cpp )
+    set(METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} ${METABUF_SOURCE_PATH}/metagen/metagen.cpp)
 
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_INCLUDE_PATH} )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metagen )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_INCLUDE_PATH})
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metagen)
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR})
     
-    ADD_EXECUTABLE( ${PROJECT_NAME} ${METAGEN_SOURCE_FILES} )
+    ADD_EXECUTABLE(${PROJECT_NAME} ${METAGEN_SOURCE_FILES})
 
     if(WIN32)
-        set_target_properties( ${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
-        set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
+        set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
+        set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
     endif()
     
     target_link_libraries(${PROJECT_NAME} metabuf xml2metabuf)
