--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ OPTION(METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF)
 OPTION(METABUF_METAGEN "METABUF_METAGEN" ON)
 OPTION(METABUF_XML2METABUF "METABUF_XML2METABUF" OFF)
 OPTION(METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF)
-OPTION(METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF)
-OPTION(METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF)
 OPTION(METABUF_EXTERNAL_CONFIG "METABUF_EXTERNAL_CONFIG" OFF)
 OPTION(METABUF_INSTALL "METABUF_INSTALL" OFF)
 OPTION(METABUF_TEST "METABUF_TEST" ON)
 
+set(METABUF_PUGIXML_INCLUDE_DIRS "" CACHE STRING "METABUF_PUGIXML_INCLUDE_DIRS")
+set(METABUF_PUGIXML_LIBRARIES "" CACHE STRING "METABUF_PUGIXML_LIBRARIES")
 
 IF(NOT METABUF_EXTERNAL_BUILD)
     if(${CMAKE_C_COMPILER_ID} STREQUAL Clang)
@@ -78,12 +78,10 @@ if(METABUF_METAGEN OR METABUF_XML2METABUF)
     if(NOT METABUF_PUGIXML_EXTERNAL)
         include(cmake/pugixml_download.cmake)
         
-        set(METABUF_PUGIXML_INCLUDE_DIR ${pugixml_INCLUDE_DIR})
-        set(METABUF_PUGIXML_LIBRARY_NAME ${pugixml_LIBRARY_NAME})
+        set(METABUF_PUGIXML_INCLUDE_DIRS ${pugixml_INCLUDE_DIR})
+        set(METABUF_PUGIXML_LIBRARIES ${pugixml_LIBRARY_NAME})
     endif()
 endif()
-
-
 
 if(METABUF_METAGEN OR METABUF_XML2METABUF)
     #xml2metabuf
@@ -99,7 +97,7 @@ if(METABUF_METAGEN OR METABUF_XML2METABUF)
     
     INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_INCLUDE_PATH})
     INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_SOURCE_PATH}/xml2metabuf)
-    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR})
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIRS})
     
     ADD_LIBRARY(${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES})
     
@@ -117,7 +115,7 @@ if(METABUF_METAGEN)
 
     INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_INCLUDE_PATH})
     INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_SOURCE_PATH}/metagen)
-    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR})
+    INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIRS})
     
     ADD_EXECUTABLE(${PROJECT_NAME} ${METAGEN_SOURCE_FILES})
 
@@ -127,8 +125,7 @@ if(METABUF_METAGEN)
     endif()
     
     target_link_libraries(${PROJECT_NAME} metabuf xml2metabuf)
-    target_link_libraries(${PROJECT_NAME} ${XML2METABUF_LIBRARY_NAME})
-    target_link_libraries(${PROJECT_NAME} ${METABUF_PUGIXML_LIBRARY_NAME})
+    target_link_libraries(${PROJECT_NAME} ${METABUF_PUGIXML_LIBRARIES})
     
     if(NOT METABUF_PUGIXML_EXTERNAL)
         add_dependencies(${PROJECT_NAME} pugixml_download)
