--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 
 set(METABUF_LIBRARY_NAME metabuf)
 
@@ -94,6 +94,8 @@ if(METABUF_METAGEN OR METABUF_XML2METABUF)
     set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/Xml2Metacode.hpp)
     set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.cpp)
     set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlProtocol.hpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlCRC32.cpp)
+    set(XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${METABUF_SOURCE_PATH}/xml2metabuf/XmlCRC32.hpp)
     
     INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_INCLUDE_PATH})
     INCLUDE_DIRECTORIES(${PROJECT_NAME} ${METABUF_SOURCE_PATH}/xml2metabuf)
